--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -199,14 +199,21 @@
     "declaration": "Datenschutzerklärung"
   },
   "links": {
+    "admin": {
+      "copy": "Adminlink kopieren",
+      "copySuccess": "Adminlink kopiert",
+      "description": "Mit dem folgenden Link kannst Du Deine Umfrage bearbeiten.",
+      "open": "Admin-Dashboard öffnen"
+    },
+    "invite": {
+      "copy": "Einladungslink kopieren",
+      "copySuccess": "Einladungslink kopiert",
+      "description": "Mit dem folgenden Link kannst Du weitere Nutzende einladen.",
+      "open": "Umfrage öffnen"
+    },
     "done": "Deine Umfrage wurde erstellt!",
     "share": "Teile Deine Umfrage mit dem Titel:",
-    "invite": "Mit dem folgenden Link kannst Du weitere Nutzende einladen.",
     "loosingLink": "ACHTUNG: Wenn der Link nicht gespeichert wird, geht er verloren!",
-    "copy": "Link kopieren",
-    "copySuccess": "Link kopiert",
-    "open": "öffnen",
-    "change": "Mit dem folgenden Link kannst Du Deine Umfrage bearbeiten.",
     "satisfactionSurvey": "Schenkst Du uns noch einen Augenblick? Mit Deinem Feedback können wir den Terminfinder noch besser machen. Dein Feedback wird vom Entwicklungsteam bei Dataport AöR erhoben.",
     "satisfactionSurveyButton": "Zum Feedback geben",
     "email": {
