--- a/src/locales/en-EN.json
+++ b/src/locales/en-EN.json
@@ -201,12 +201,14 @@
   "links": {
     "admin": {
       "copy": "Copy admin link",
+      "copyFailed": "Admin link could not be copied",
       "copySuccess": "Admin link copied",
       "description": "You can change your poll with this link.",
       "open": "Open admin dashboard"
     },
     "invite": {
       "copy": "Copy invite link",
+      "copyFailed": "Invite link could not be copied",
       "copySuccess": "Invite link copied",
       "description": "You can invite others to your poll with this link.",
       "open": "Open appointment"
