--- a/src/locales/de-DE-sie.json
+++ b/src/locales/de-DE-sie.json
@@ -204,7 +204,7 @@
       "copyFailed": "Adminlink konnte nicht kopiert werden",
       "copySuccess": "Adminlink kopiert",
       "description": "Mit dem folgenden Link kannst Du Deine Umfrage bearbeiten.",
-      "open": "Admin-Dashboard öffnen"
+      "open": "Umfrage bearbeiten"
     },
     "invite": {
       "copy": "Einladungslink kopieren",
@@ -219,7 +219,7 @@
     "satisfactionSurvey": "Schenken Sie uns noch einen Augenblick? Mit Ihrem Feedback können wir den Terminfinder noch besser machen. Ihr Feedback wird vom Entwicklungsteam bei Dataport AöR erhoben.",
     "satisfactionSurveyButton": "Zum Feedback geben",
     "email": {
-      "send": "E-Mail versenden",
+      "send": "per E-Mail versenden",
       "addressing": "Sehr geehrte Damen und Herren",
       "creation": "zur gemeinsamen Terminfindung habe ich eine Termin-Umfrage erstellt",
       "participate": "Wählen Sie passende Terminoptionen unter",
