refactor: images which are decorative elements
- aria-hidden
- empty alt text which affirms screenreaders to ignore this img
- use the same format for every `<img>`
- formatting
- add description for number of accepted participants

--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -58,6 +58,7 @@
     "downloadCsv": "Lade die Tabelle der Teilnehmenden mit ihren Entscheidungen herunter. Du kannst sie in Excel importieren, um deine Veranstaltung besser zu planen.",
     "downloadCsvDescription": "Tabelle als csv Datei herunterladen",
     "caption": "Terminübersicht",
+    "acceptedNum": "Zusagen an diesem Termin",
     "title": {
       "title": "Titel",
       "set": "Gib Deiner Umfrage einen Titel!",
