--- a/src/locales/de-DE-sie.json
+++ b/src/locales/de-DE-sie.json
@@ -58,6 +58,7 @@
     "downloadCsv": "Laden Sie die Tabelle der Teilnehmenden mit ihren Entscheidungen herunter. Sie können sie in Excel importieren, um Ihre Veranstaltung besser zu planen.",
     "downloadCsvDescription": "Tabelle als csv Datei herunterladen",
     "caption": "Terminübersicht",
+    "acceptedNum": "Zusagen an diesem Termin",
     "title": {
       "title": "Titel",
       "set": "Geben Sie Ihrer Umfrage einen Titel!",
