feat: display current route in title
- add service to set title
- formatting
- add/update translation where needed

--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -266,6 +266,7 @@
     "navLabel": {
       "contact": "Kontakt",
       "imprint": "Impressum",
+      "accessibility": "Erklärung zur Barrierefreiheit",
       "ossCode": "Links zum Quellcode",
       "reference": "Referenz"
     },
