--- a/src/locales/de-DE-sie.json
+++ b/src/locales/de-DE-sie.json
@@ -266,6 +266,7 @@
     "navLabel": {
       "contact": "Kontakt",
       "imprint": "Impressum",
+      "accessibility": "Erklärung zur Barrierefreiheit",
       "ossCode": "Links zum Quellcode",
       "reference": "Referenz"
     },
