--- a/src/locales/en-EN.json
+++ b/src/locales/en-EN.json
@@ -27,7 +27,8 @@
     "security": "Security",
     "networking": "Networking",
     "slogan": "Create appointments and get on the same page with your people!",
-    "testEnvironmentBanner": "This is a test environment of {{value}}. Please do not fill in personal data."
+    "testEnvironmentBanner": "This is a test environment of {{value}}. Please do not fill in personal data.",
+    "placeholder": "..."
   },
   "poll": {
     "actions": "Actions",
@@ -233,9 +234,6 @@
     "minimum": "(min. 8 characters, one number, one capital letter, one special character)",
     "locked": "This poll is protected with a password",
     "enter": "Enter the password to participate in this poll.",
-    "placeholder": "Enter password",
-    "placeholderEnter": "enter",
-    "placeholderChange": "change",
     "enterPassword": "Enter password",
     "changePassword": "Change password",
     "invalid": "The entered password is invalid.",
