--- a/src/locales/platt.json
+++ b/src/locales/platt.json
@@ -158,6 +158,7 @@
   },
   "links": {
     "admin": {
+      "base": "Admin-Lenk",
       "copy": "Admin-Lenk koperen",
       "copyFailed": "Kunn de Admin-Lenk nich koperen",
       "copySuccess": "Admin-Lenk kopeert",
@@ -165,6 +166,7 @@
       "open": "Umfraag ännern"
     },
     "invite": {
+      "base": "Inladungslink",
       "copy": "Inladungslink kopieren",
       "copyFailed": "Kunn de Inladungslink nich koperen",
       "copySuccess": "Inladungslink kopiert",
