--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -59,6 +59,7 @@
     "downloadCsvDescription": "Tabelle als csv Datei herunterladen",
     "caption": "Terminübersicht",
     "acceptedNum": "Zusagen an diesem Termin",
+    "acceptedTotal": "Zusagen insgesamt",
     "title": {
       "title": "Titel",
       "set": "Gib Deiner Umfrage einen Titel!",
