--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -52,7 +52,7 @@
     "answer": "Beantworte die Umfrage von",
     "addParticipant": "Teilnehmende hinzufügen",
     "deleteParticipant": "Teilnehmende entfernen",
-    "editParticipant": "Teilnehmende hinzufügen",
+    "editParticipant": "Teilnehmende bearbeiten",
     "noParticipation": "Ich kann nicht teilnehmen",
     "send": "Abschicken",
     "downloadIcs": "Lade dieses Datum als .ics-Datei herunter und importiere es in deinen Kalender. Erfahre in der Beschreibung des Termins, wie die Teilnehmenden abgestimmt haben.",
