feat: warn user that the appointment is already created
- display warning
- remove back navigation
- change forward navigation text
- remove unused service

! Dev hint:
Do not refactor the "else then if" structure into a single "else if"

--- a/src/locales/de-DE-sie.json
+++ b/src/locales/de-DE-sie.json
@@ -36,6 +36,8 @@
     "create": "Umfrage erstellen",
     "createNew": "Neue Umfrage erstellen",
     "configure": "Konfigurieren Sie Ihre Umfrage",
+    "warningAlreadyCreated": "Die Umfrage wurde bereits erstellt! Um sie zu bearbeiten, müssen Sie den Adminlink verwenden.",
+    "showLinks": "Links anzeigen",
     "start": "Umfrage starten",
     "pause": "Umfrage pausieren",
     "paused": "Die Umfrage kann derzeit nicht bearbeitet werden, da sie pausiert ist.",
