feat: update tos text

--- a/src/locales/de-DE-sie.json
+++ b/src/locales/de-DE-sie.json
@@ -259,10 +259,10 @@
   },
   "tos": {
     "tos": "Nutzungsbedingungen",
-    "accept_0": "Ja, ich stimme den",
-    "accept_1": "zu und habe die",
-    "accept_2": "zur Kenntnis genommen.",
-    "accept": "Bitte akzeptieren Sie die Datenschutzerklärung und die Nutzungsbedingungen."
+    "accept_0": "Ich willige ein, dass die in der ",
+    "accept_1": " genannte verantwortliche Stelle meine Daten zur Abstimmung von Besprechungsterminen verarbeitet, und weiß, dass ich diese Einwilligung jederzeit per E-Mail an die in der Datenschutzerklärung genannte Adresse der verantwortlichen Stelle mit Wirkung ausschließlich für die Zukunft widerrufen kann. Darüber hinaus stimme ich den ",
+    "accept_2": " zu.",
+    "accept": "Bitte akzeptiere die Datenschutzerklärung und die Nutzungsbedingungen."
   },
   "footer": {
     "navLabel": {
