--- a/src/locales/en-EN.json
+++ b/src/locales/en-EN.json
@@ -259,9 +259,9 @@
   },
   "tos": {
     "tos": "Terms of service",
-    "accept_0": "Yes, i accept the",
-    "accept_1": " and have read the ",
-    "accept_2": " .",
+    "accept_0": "I consent to the controller named in the ",
+    "accept_1": " processing my data for the purpose of coordinating appointments and I know that I can revoke this consent at any time by sending an email to the address of the controller named in the privacy declaration with effect for the future only. Furthermore, I agree to the ",
+    "accept_2": ".",
     "accept": "Please accept the privacy declaration and the terms of service."
   },
   "footer": {
