--- a/src/locales/de-DE-sie.json
+++ b/src/locales/de-DE-sie.json
@@ -262,7 +262,7 @@
     "accept_0": "Ich willige ein, dass die in der ",
     "accept_1": " genannte verantwortliche Stelle meine Daten zur Abstimmung von Besprechungsterminen verarbeitet, und weiß, dass ich diese Einwilligung jederzeit per E-Mail an die in der Datenschutzerklärung genannte Adresse der verantwortlichen Stelle mit Wirkung ausschließlich für die Zukunft widerrufen kann. Darüber hinaus stimme ich den ",
     "accept_2": " zu.",
-    "accept": "Bitte akzeptiere die Datenschutzerklärung und die Nutzungsbedingungen."
+    "accept": "Bitte stimme den Nutzungsbedingungen zu und willige in die o.g. Datenverarbeitung ein."
   },
   "footer": {
     "navLabel": {
