refactor: add `aria-label` to describe the buttons behaviour

--- a/src/locales/en-EN.json
+++ b/src/locales/en-EN.json
@@ -183,6 +183,7 @@
       "backToTheFuture": "Return",
       "content": "This is where we publish information about our website in sign language.",
       "header": "Sign language",
+      "startVideo": "Start video",
       "videos": {
         "0": {
           "title": "Declaration on accessibility"
