--- a/src/locales/platt.json
+++ b/src/locales/platt.json
@@ -143,6 +143,7 @@
       "backToTheFuture": "Zurück",
       "content": "An dieser Stelle veröffentlichen wir Informationen zu unserem Webauftritt in Gebärdensprache.",
       "header": "Gebärdensprache",
+      "startVideo": "Video starten",
       "videos": {
         "0": {
           "title": "Erklärung to Barrierefrieheet"
